--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         window.location.href = "tete.html";
     }, 5000); // 5000 milissegundos = 5 segundos
 </script>
-    <a href="home.html">
+    <a href="https://isaqueharper.github.io/PortifolioHp/">
     <div class="stage">
         <div class="layer"></div>
         <div class="layer"></div>
